// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders in desktop mode 1`] = `
<div>
  <section
    class="c-WelcomeBlock"
  >
    <div
      class="c-WelcomeBlock__Heading"
    >
      <h1
        class="c-WelcomeBlock__Title"
      />
      <span
        class="c-WelcomeBlock__Subtitle"
      />
    </div>
    <div
      class="c-WelcomeBlock__Svg"
    >
      <div
        data-testid="hero-illu-desktop"
      />
    </div>
  </section>
</div>
`;

exports[`renders in mobile mode 1`] = `
<div>
  <section
    class="c-WelcomeBlock"
  >
    <div
      class="c-WelcomeBlock__Heading"
    >
      <h1
        class="c-WelcomeBlock__Title"
      />
      <span
        class="c-WelcomeBlock__Subtitle"
      />
    </div>
    <div
      class="c-WelcomeBlock__Svg"
    >
      <div
        data-testid="hero-illu-mobile"
      />
    </div>
  </section>
</div>
`;
